// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base config works correctly [client] 1`] = `
"
const name_0 = \\"Todo\\"
const commands_0 = {
  [\`create\`]: () => {},
  [\`update\`]: () => {},
  [\`remove\`]: () => {}
}

const aggregates = []

aggregates.push({
  name: name_0
, commands: commands_0
})

export default aggregates
"
`;

exports[`base config works correctly [server] 1`] = `
"
import commands_0_instance from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testCommands.js\\"
import serializeState_0_instance from \\"resolve-runtime/lib/common/defaults/json-serialize-state.js\\"
import deserializeState_0_instance from \\"resolve-runtime/lib/common/defaults/json-deserialize-state.js\\"
const constructorBindFunction =
    (
      constructorFunction,
      compileTimeOptions,
      compileTimeImports,
      runTimeOptions,
      runTimeImports
    ) => constructorFunction(
      { ...compileTimeOptions, ...runTimeOptions },
      { ...compileTimeImports, ...runTimeImports }
    )
const idempotentFunction = value => value
const name_0 = \\"Todo\\"
const commands_0 = commands_0_instance
const serializeState_0 = serializeState_0_instance
const deserializeState_0 = deserializeState_0_instance

const aggregates = []

aggregates.push({
  name: name_0
, commands: commands_0
, serializeState: serializeState_0
, deserializeState: deserializeState_0
})

export default aggregates
"
`;

exports[`base(v2) config works correctly [client] 1`] = `
"
const name_0 = \\"Todo\\"
const commands_0 = {
  [\`create\`]: () => {},
  [\`update\`]: () => {},
  [\`remove\`]: () => {}
}
const name_1 = \\"Item\\"
const commands_1 = {
  [\`create\`]: () => {},
  [\`update\`]: () => {},
  [\`remove\`]: () => {}
}

const aggregates = []

aggregates.push({
  name: name_0
, commands: commands_0
})

aggregates.push({
  name: name_1
, commands: commands_1
})

export default aggregates
"
`;

exports[`base(v2) config works correctly [server] 1`] = `
"
import commands_0_instance from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testCommands.js\\"
import serializeState_0_instance from \\"resolve-runtime/lib/common/defaults/json-serialize-state.js\\"
import deserializeState_0_instance from \\"resolve-runtime/lib/common/defaults/json-deserialize-state.js\\"
import commands_1_instance from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testCommands.js\\"
import serializeState_1_instance from \\"resolve-runtime/lib/common/defaults/json-serialize-state.js\\"
import deserializeState_1_instance from \\"resolve-runtime/lib/common/defaults/json-deserialize-state.js\\"
const constructorBindFunction =
    (
      constructorFunction,
      compileTimeOptions,
      compileTimeImports,
      runTimeOptions,
      runTimeImports
    ) => constructorFunction(
      { ...compileTimeOptions, ...runTimeOptions },
      { ...compileTimeImports, ...runTimeImports }
    )
const idempotentFunction = value => value
const name_0 = \\"Todo\\"
const commands_0 = commands_0_instance
const serializeState_0 = serializeState_0_instance
const deserializeState_0 = deserializeState_0_instance
const name_1 = \\"Item\\"
const commands_1 = commands_1_instance
const serializeState_1 = serializeState_1_instance
const deserializeState_1 = deserializeState_1_instance

const aggregates = []

aggregates.push({
  name: name_0
, commands: commands_0
, serializeState: serializeState_0
, deserializeState: deserializeState_0
})

aggregates.push({
  name: name_1
, commands: commands_1
, serializeState: serializeState_1
, deserializeState: deserializeState_1
})

export default aggregates
"
`;

exports[`config with commands as module works correctly [client] 1`] = `
"
const name_0 = \\"Todo\\"
const commands_0 = {
  [\`create\`]: () => {},
  [\`update\`]: () => {},
  [\`remove\`]: () => {}
}

const aggregates = []

aggregates.push({
  name: name_0
, commands: commands_0
})

export default aggregates
"
`;

exports[`config with commands as module works correctly [server] 1`] = `
"
import commands_0_constructor from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testCommandsAsModule.js\\"
import commands_0_import_testCommandsAsModule from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testCommandsAsModule.js\\"
import serializeState_0_instance from \\"resolve-runtime/lib/common/defaults/json-serialize-state.js\\"
import deserializeState_0_instance from \\"resolve-runtime/lib/common/defaults/json-deserialize-state.js\\"
const constructorBindFunction =
    (
      constructorFunction,
      compileTimeOptions,
      compileTimeImports,
      runTimeOptions,
      runTimeImports
    ) => constructorFunction(
      { ...compileTimeOptions, ...runTimeOptions },
      { ...compileTimeImports, ...runTimeImports }
    )
const idempotentFunction = value => value
const name_0 = \\"Todo\\"
const commands_0_imports = { [\\"testCommandsAsModule\\"]: commands_0_import_testCommandsAsModule }
const commands_0_options = {}
const commands_0 = commands_0_constructor(
      commands_0_options,
      commands_0_imports
    )
const serializeState_0 = serializeState_0_instance
const deserializeState_0 = deserializeState_0_instance

const aggregates = []

aggregates.push({
  name: name_0
, commands: commands_0
, serializeState: serializeState_0
, deserializeState: deserializeState_0
})

export default aggregates
"
`;

exports[`config with projection works correctly [client] 1`] = `
"
const name_0 = \\"Todo\\"
const commands_0 = {
  [\`create\`]: () => {},
  [\`update\`]: () => {},
  [\`remove\`]: () => {}
}

const aggregates = []

aggregates.push({
  name: name_0
, commands: commands_0
})

export default aggregates
"
`;

exports[`config with projection works correctly [server] 1`] = `
"
import commands_0_instance from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testCommands.js\\"
import serializeState_0_instance from \\"resolve-runtime/lib/common/defaults/json-serialize-state.js\\"
import deserializeState_0_instance from \\"resolve-runtime/lib/common/defaults/json-deserialize-state.js\\"
import projection_0_instance from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testProjection.js\\"
const constructorBindFunction =
    (
      constructorFunction,
      compileTimeOptions,
      compileTimeImports,
      runTimeOptions,
      runTimeImports
    ) => constructorFunction(
      { ...compileTimeOptions, ...runTimeOptions },
      { ...compileTimeImports, ...runTimeImports }
    )
const idempotentFunction = value => value
const name_0 = \\"Todo\\"
const commands_0 = commands_0_instance
const serializeState_0 = serializeState_0_instance
const deserializeState_0 = deserializeState_0_instance
const projection_0_hash = \\"fd94fac3a204e7a84b8cf3ca72e37aaa23c04dc2e1e971d69af2e20e84a40bbc2170931076d4d3e847c571f3be90e47f4c0f48aac76fdcaed083df090285b39d\\"
const projection_0 = projection_0_instance

const aggregates = []

aggregates.push({
  name: name_0
, commands: commands_0
, serializeState: serializeState_0
, deserializeState: deserializeState_0
, projection: projection_0
, invariantHash: projection_0_hash
})

export default aggregates
"
`;

exports[`config with schedulers works correctly [client] 1`] = `
"
const name_0 = \\"Todo\\"
const commands_0 = {
  [\`create\`]: () => {},
  [\`update\`]: () => {},
  [\`remove\`]: () => {}
}

const aggregates = []

aggregates.push({
  name: name_0
, commands: commands_0
})

export default aggregates
"
`;

exports[`config with schedulers works correctly [server] 1`] = `
"
import commands_0_instance from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testCommands.js\\"
import serializeState_0_instance from \\"resolve-runtime/lib/common/defaults/json-serialize-state.js\\"
import deserializeState_0_instance from \\"resolve-runtime/lib/common/defaults/json-deserialize-state.js\\"
import commands_s_0_constructor from \\"resolve-runtime/lib/common/sagas/scheduler-aggregate-commands.js\\"
import projection_s_0_constructor from \\"resolve-runtime/lib/common/sagas/scheduler-aggregate-projection.js\\"
import serializeState_s_0_instance from \\"resolve-runtime/lib/common/defaults/json-serialize-state.js\\"
import deserializeState_s_0_instance from \\"resolve-runtime/lib/common/defaults/json-deserialize-state.js\\"
const constructorBindFunction =
    (
      constructorFunction,
      compileTimeOptions,
      compileTimeImports,
      runTimeOptions,
      runTimeImports
    ) => constructorFunction(
      { ...compileTimeOptions, ...runTimeOptions },
      { ...compileTimeImports, ...runTimeImports }
    )
const idempotentFunction = value => value
const name_0 = \\"Todo\\"
const commands_0 = commands_0_instance
const serializeState_0 = serializeState_0_instance
const deserializeState_0 = deserializeState_0_instance
const name_s_0 = \\"scheduler\\"
const commands_s_0_imports = {  }
const commands_s_0_options = {}
const commands_s_0 = constructorBindFunction.bind(null,
      commands_s_0_constructor,
      commands_s_0_options,
      commands_s_0_imports
    )
    Object.assign(commands_s_0, commands_s_0_constructor)
    
const projection_s_0_imports = {  }
const projection_s_0_options = {}
const projection_s_0 = constructorBindFunction.bind(null,
      projection_s_0_constructor,
      projection_s_0_options,
      projection_s_0_imports
    )
    Object.assign(projection_s_0, projection_s_0_constructor)
    
const serializeState_s_0 = serializeState_s_0_instance
const deserializeState_s_0 = deserializeState_s_0_instance

const aggregates = []

aggregates.push({
  name: name_0
, commands: commands_0
, serializeState: serializeState_0
, deserializeState: deserializeState_0
})

aggregates.push({
  name: name_s_0
, commands: commands_s_0
, projection: projection_s_0
, serializeState: serializeState_s_0
, deserializeState: deserializeState_s_0
, invariantHash: \\"1.5586922347581163e+21\\"
, schedulerName: \\"scheduler\\"
, isSystemAggregate: true
})

export default aggregates
"
`;
